--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ __pycache__/
 # setting/config files
 latest version/config/
 latest version/config.py
+
+# song data
+latest version/database/songs/
