[Enhance][Bug fix] Another bundle mode & skill_amane bug
- For Arcaea 5.6.0
- Fix a bug that `skill_amane` may arise error when the step type of world map is null.
- Add a new bundle update mode, which is same with official server, that the server will find a update path from old version to new version, ignoring the application version restrictions.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ latest version/config.py
 
 # song data
 latest version/database/songs/
+latest version/database/bundle/
+
+!latest version/database/bundle/README.md
+
+# backup
+latest version/database/backup/
